Ejercicos 1,2 a falta de revisión

--- a/Ejercicio-1-2-Blanca-Cano.ipynb
+++ b/Ejercicio-1-2-Blanca-Cano.ipynb
@@ -7,10 +7,15 @@
     "# Ejercicios Teoría de Números \n",
     "## Datos personales\n",
     "- Alumna: Blanca Cana Camarero \n",
-    "- Correo: blancacano@correo.ugr.es\n",
-    "\n",
+    "- Correo: blancacano@correo.ugr.es"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ejercicio primero \n",
-    "Dado un número : "
+    "Dado un número :"
    ]
   },
   {
@@ -20,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +34,7 @@
        "75577392"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +94,10 @@
     "$$a^{p-1} \\mod p \\not \\equiv 1$$\n",
     "entonces sabremos que $p$ no es primo.\n",
     "\n",
-    "TODO-\n",
-    "En caso contrario diremos que $p$ es un candidato a primo en la base $a$ de Fermat. \n",
+    "En caso contrario diremos que $p$ es un posible primo de Fermat en la base $a$ . \n",
     "\n",
-    "Antes de aplicar el algoritmo, necesitaremos calcular la exponencial, lo haremos por dos método de la exponencial rápida. \n",
+    "Vemos que para el cálculo de $a^{p-1} \\mod p$ es necesario el cálculo de una potencia, con el fin de optimizar el algoritmo calcularemos la potencia de $a^{p-1}$ con el método de las exponencial rápida. \n",
+    "Existen dos variantes, presentamos a continuación dos versiones del cálculo de $f(a,q,p) = a^{q} \\mod p$ combinando las dos técnicas de exponenciación.\n",
     "\n",
     "#### Algoritmo de derecha izquierda\n",
     "La idea que subyace es que los dígitos en binario no se conocen, así que se van calculando a la par que se aplica el algoritmo. "
@@ -100,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +147,7 @@
        "1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,14 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +402,7 @@
        "1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -465,10 +463,10 @@
      "output_type": "stream",
      "text": [
       "ALGORITMO IZQUIERDA A DERECHA\n",
-      "Para base b=2 0\n",
-      "Para base b=5 69095490\n",
-      "Para base b=7 41203985\n",
-      "Para base b=11 39074249\n"
+      "Para base b=2 50057215\n",
+      "Para base b=5 58601398\n",
+      "Para base b=7 22113448\n",
+      "Para base b=11 21343212\n"
      ]
     }
    ],
@@ -483,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -491,15 +489,16 @@
      "output_type": "stream",
      "text": [
       "ALGORITMO DE DERECHA A IZQUIERDA y de izquierda a derecha \n",
-      "Para base b=2 50057215 vs 50057215\n",
-      "Para base b=5 58601398 vs 58601398\n",
-      "Para base b=7 22113448 vs 22113448\n",
-      "Para base b=11 21343212 vs 21343212\n"
+      "Para base b=2 1 vs 1\n",
+      "Para base b=3 1 vs 1\n",
+      "Para base b=5 1 vs 1\n",
+      "Para base b=7 1 vs 1\n",
+      "Para base b=11 1 vs 1\n"
      ]
     }
    ],
    "source": [
-    "bases = [2,5,7,11]\n",
+    "bases = [2,3,5,7,11]\n",
     "println(\"ALGORITMO DE DERECHA A IZQUIERDA y de izquierda a derecha \")\n",
     "for b in bases\n",
     "    r1 = RightToLeftFastExponential(b, n-1, n)\n",
@@ -510,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -520,33 +519,33 @@
       "= 1 que en mi algoritmo es 1\n",
       "= 2 que en mi algoritmo es 2\n",
       "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
       "= 0 que en mi algoritmo es 0\n",
-      "= 4 que en mi algoritmo es 4\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
       "= 2 que en mi algoritmo es 2\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 4 que en mi algoritmo es 4\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
       "= 0 que en mi algoritmo es 0\n",
       "= 0 que en mi algoritmo es 0\n",
       "= 2 que en mi algoritmo es 2\n",
-      "= 4 que en mi algoritmo es 4\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 0 que en mi algoritmo es 0\n",
+      "= 0 que en mi algoritmo es 0\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 2 que en mi algoritmo es 2\n",
+      "= 0 que en mi algoritmo es 0\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 0 que en mi algoritmo es 0\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 0 que en mi algoritmo es 0\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 0 que en mi algoritmo es 0\n",
+      "= 0 que en mi algoritmo es 0\n",
+      "= 1 que en mi algoritmo es 1\n",
       "= 1 que en mi algoritmo es 1\n",
       "= 1 que en mi algoritmo es 1\n",
       "= 3 que en mi algoritmo es 3\n",
+      "= 0 que en mi algoritmo es 0\n",
+      "= 2 que en mi algoritmo es 2\n",
+      "= 0 que en mi algoritmo es 0\n",
       "Hay 0 errores\n",
       "Any[]\n"
      ]
@@ -574,11 +573,379 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Ejercicio segundo\n",
+    "Dado un número "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75577399"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 75577399"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apartado primero \n",
+    "Use el algoritmo manual para calcular el símbolo de Jacobi $(\\frac{p}{n}),$ para $p$ cada uno de los 5 primeros primos. \n",
+    "\n",
+    "### Solución   \n",
+    "Entendemos por algoritmo manual a aquel que usando las propiedades del símbolo de Jacobi permiten calcularlo sin factorizar y sin exponenciación. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Cálculos para p=8 ---\n",
+      "mod (75577399,8) = 7\n",
+      "--- Cálculos para p=4 ---\n",
+      "mod (75577399,4) = 3\n",
+      "--- Cálculos para p=3 ---\n",
+      "mod (75577399,3) = 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function n_modulo_p(n,p)\n",
+    "    println(\"--- Cálculos para p=$p ---\")\n",
+    "    n_modulo_p = mod(n,p)\n",
+    "    println(\"mod ($n,$p) = $n_modulo_p\")\n",
+    "    return n_modulo_p\n",
+    "end\n",
+    "\n",
+    "n_modulo_p(n,8)\n",
+    "n_modulo_p(n,4)\n",
+    "n_modulo_p(n,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Caso $p=2$\n",
+    "Se tienen que $n \\equiv -1 \\mod 8$, luego \n",
+    "$$\\left(\\frac{2}{n}\\right) = (-1)^{8k^2-6k} = 1$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Caso $p=3$\n",
+    "\n",
+    "En este caso tanto $n$ como $p$ son impares y además se cumple que\n",
+    "$$n \\equiv 3 \\mod 4$$\n",
+    "entonces \n",
+    "\\begin{equation}\n",
+    "    \\left(\\frac{3}{n}\\right)\n",
+    "    = \n",
+    "    - \\left(\\frac{n}{3}\\right)\n",
+    "    = \n",
+    "    - \\left(\\frac{1}{3}\\right)\n",
+    "    = \n",
+    "    - \\left(\\frac{3}{1}\\right)\n",
+    "   = -1 \n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Caso $p=5$\n",
+    "Puesto que $5 \\equiv 1 \\mod 4$ entonces\n",
+    "\\begin{equation*}\n",
+    "    \\left(\\frac{5}{n}\\right)\n",
+    "    = \n",
+    "     \\left(\\frac{n}{5}\\right)\n",
+    "\\end{equation*}\n",
+    "Además $n \\equiv 4 \\mod 5$ luego \n",
+    "\\begin{equation*}\n",
+    "    \\left(\\frac{5}{n}\\right)\n",
+    "    = \n",
+    "     \\left(\\frac{n}{5}\\right)\n",
+    "     = \n",
+    "     \\left(\\frac{4}{5}\\right) \n",
+    "\\end{equation*}\n",
+    "Sabiendo que  $4 \\equiv -1 \\mod 5$ y aplicando que \n",
+    "$(\\frac{-1}{m}) = (-1)^\\frac{(m-1)}{2},$\n",
+    "\\begin{equation*}\n",
+    "    \\left(\\frac{4}{5}\\right)\n",
+    "    = \n",
+    "     \\left(\\frac{-1}{5}\\right)\n",
+    "    = \n",
+    "    (-1)^\\frac{(5-1)}{2}\n",
+    "    = 1\n",
+    "\\end{equation*}\n",
+    "Por lo que concluimos que \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\left(\\frac{5}{n}\\right)\n",
+    "    = \n",
+    "    1\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Cálculos para p=5 ---\n",
+      "mod (75577399,5) = 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_modulo_p(n,5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Así pues es fácil construir una función que aplique el algoritmo de Jacobi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VerboseJacobi (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function Jacobi(a ::Integer,n ::Integer)\n",
+    "    a %= n\n",
+    "    result = 1\n",
+    "    while a != 0\n",
+    "        while iseven(a)\n",
+    "            a /=2\n",
+    "            ((n % 8 in [3, 5]) && (result *= -1))\n",
+    "        end\n",
+    "        a, n = n,a\n",
+    "        ((a % 4 == n % 4 == 3) && (result *= -1) )\n",
+    "        a %=n\n",
+    "    end\n",
+    "\n",
+    "    return n == 1 ? result : 0  \n",
+    "end\n",
+    "function VerboseJacobi(a ::Integer,n ::Integer)\n",
+    "    println(\"Símbolo de Jacobi ($a/$n)\")\n",
+    "    a %= n\n",
+    "    result = 1\n",
+    "    print(\"($a/$n)\")\n",
+    "    while a != 0\n",
+    "        while iseven(a)\n",
+    "            a /=2\n",
+    "            ((n % 8 in [3, 5]) && (result *= -1))\n",
+    "            print(\"= $result x($a/$n)\")\n",
+    "        end\n",
+    "        a, n = n,a\n",
+    "        ((a % 4 == n % 4 == 3) && (result *= -1) )\n",
+    "        a %=n\n",
+    "        print(\"= $result x($a/$n)\")\n",
+    "    end\n",
+    "\n",
+    "    return n == 1 ? result : 0  \n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Símbolo de Jacobi (2/75577399)\n",
+      "(2/75577399)= 1 x(1.0/75577399)= 1 x(0.0/1.0)= 1\n",
+      "Símbolo de Jacobi (3/75577399)\n",
+      "(3/75577399)= -1 x(1/3)= -1 x(0/1)= -1\n",
+      "Símbolo de Jacobi (5/75577399)\n",
+      "(5/75577399)= 1 x(4/5)= -1 x(2.0/5)= 1 x(1.0/5)= 1 x(0.0/1.0)= 1\n",
+      "Símbolo de Jacobi (7/75577399)\n",
+      "(7/75577399)= -1 x(2/7)= -1 x(1.0/7)= -1 x(0.0/1.0)= -1\n",
+      "Símbolo de Jacobi (11/75577399)\n",
+      "(11/75577399)= -1 x(7/11)= 1 x(4/7)= 1 x(2.0/7)= 1 x(1.0/7)= 1 x(0.0/1.0)= 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in [2,3,5,7,11]\n",
+    "    println(\"= $(VerboseJacobi(p,n))\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apartado segundo \n",
+    "Si para alguna de esas bases $n$ es un posible primo de Fermat, comprueba si además es posible primo de Euler. \n",
+    "\n",
+    "### Solución\n",
+    "\n",
+    "Como hemos procedido en el ejercicio primero calcularemos comprobaremos si se satisface que \n",
+    "$$a^{(p-1)} \\equiv 1 \\mod(p)$$\n",
+    "entonces $p$ será un posible primo de Fermat en la base $a$.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Algoritmo de exponenciación rápida de izquierda a derecha \n",
+      "Para base b=2 1\n",
+      "Para base b=3 1\n",
+      "Para base b=5 1\n",
+      "Para base b=7 1\n",
+      "Para base b=11 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Celda 1\n",
+    "bases = [2,3,5,7,11]\n",
+    "println(\"Algoritmo de exponenciación rápida de izquierda a derecha \")\n",
+    "for b in bases\n",
+    "    r2 = LeftToRightFastExponential(b, n-1, n)\n",
+    "    println(\"Para base b=$(b) $r2\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A la vista de los resultados para cualquier base de los cinco primeros números primos es un posible primo de Fermat, vamos ahora si es posible primo de Euler. \n",
+    "\n",
+    "Esto será si satisface que \n",
+    "$$ \\left( \\frac{a}{p} \\right) \\equiv a^{\\frac{p-1}{2}} \\mod p$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Base 2\n",
+      "Por el algoritmo Jacobi 1\n",
+      "calculando el módulo: 2651439\n",
+      "75577399 NO es un posible primo de Euler en base 2\n",
+      "\n",
+      "Base 3\n",
+      "Por el algoritmo Jacobi -1\n",
+      "calculando el módulo: 24148959\n",
+      "75577399 NO es un posible primo de Euler en base 3\n",
+      "\n",
+      "Base 5\n",
+      "Por el algoritmo Jacobi 1\n",
+      "calculando el módulo: 17726560\n",
+      "75577399 NO es un posible primo de Euler en base 5\n",
+      "\n",
+      "Base 7\n",
+      "Por el algoritmo Jacobi -1\n",
+      "calculando el módulo: 25164264\n",
+      "75577399 NO es un posible primo de Euler en base 7\n",
+      "\n",
+      "Base 11\n",
+      "Por el algoritmo Jacobi 1\n",
+      "calculando el módulo: 13891959\n",
+      "75577399 NO es un posible primo de Euler en base 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Celda 2\n",
+    "for b in bases\n",
+    "    congruente = LeftToRightFastExponential(b, floor(Int, (n-1)/2), p)\n",
+    "    jacobi = Jacobi(b,n)\n",
+    "    println(\"\\nBase $b\")\n",
+    "    println(\"Por el algoritmo Jacobi $jacobi\")\n",
+    "    println(\"calculando el módulo: $congruente\")\n",
+    "    println(congruente == jacobi ? \"$n es un posible primo Euler en base $b\" : \n",
+    "    \"$n NO es un posible primo de Euler en base $b\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusiones   \n",
+    "\n",
+    "A la vista de los resultado en la `celda 1` se tiene que $n$ es un pseudo primo de Fermat para las bases 2,3,5,7,11; mientras que se ha comprobado en `celda 2` que no lo es primo por el criterio de Euler. "
+   ]
   }
  ],
  "metadata": {
