--- a/Ejercicio-1-2-Blanca-Cano.ipynb
+++ b/Ejercicio-1-2-Blanca-Cano.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -489,11 +489,11 @@
      "output_type": "stream",
      "text": [
       "ALGORITMO DE DERECHA A IZQUIERDA y de izquierda a derecha \n",
-      "Para base b=2 1 vs 1\n",
-      "Para base b=3 1 vs 1\n",
-      "Para base b=5 1 vs 1\n",
-      "Para base b=7 1 vs 1\n",
-      "Para base b=11 1 vs 1\n"
+      "Para base b=2 50057215 vs 50057215\n",
+      "Para base b=3 64972403 vs 64972403\n",
+      "Para base b=5 58601398 vs 58601398\n",
+      "Para base b=7 22113448 vs 22113448\n",
+      "Para base b=11 21343212 vs 21343212\n"
      ]
     }
    ],
@@ -517,35 +517,35 @@
      "output_type": "stream",
      "text": [
       "= 1 que en mi algoritmo es 1\n",
-      "= 2 que en mi algoritmo es 2\n",
       "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 2 que en mi algoritmo es 2\n",
       "= 0 que en mi algoritmo es 0\n",
       "= 0 que en mi algoritmo es 0\n",
       "= 2 que en mi algoritmo es 2\n",
       "= 1 que en mi algoritmo es 1\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 1 que en mi algoritmo es 1\n",
       "= 0 que en mi algoritmo es 0\n",
       "= 0 que en mi algoritmo es 0\n",
       "= 1 que en mi algoritmo es 1\n",
       "= 1 que en mi algoritmo es 1\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 0 que en mi algoritmo es 0\n",
+      "= 1 que en mi algoritmo es 1\n",
+      "= 0 que en mi algoritmo es 0\n",
       "= 2 que en mi algoritmo es 2\n",
       "= 0 que en mi algoritmo es 0\n",
       "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
+      "= 2 que en mi algoritmo es 2\n",
       "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 0 que en mi algoritmo es 0\n",
-      "= 1 que en mi algoritmo es 1\n",
-      "= 1 que en mi algoritmo es 1\n",
       "= 1 que en mi algoritmo es 1\n",
       "= 3 que en mi algoritmo es 3\n",
+      "= 1 que en mi algoritmo es 1\n",
       "= 0 que en mi algoritmo es 0\n",
-      "= 2 que en mi algoritmo es 2\n",
-      "= 0 que en mi algoritmo es 0\n",
+      "= 4 que en mi algoritmo es 4\n",
       "Hay 0 errores\n",
       "Any[]\n"
      ]
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        "1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "VerboseJacobi (generic function with 1 method)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
