--- a/Ejercicio-1-2-Blanca-Cano.ipynb
+++ b/Ejercicio-1-2-Blanca-Cano.ipynb
@@ -841,7 +841,7 @@
    "metadata": {},
    "source": [
     "## Apartado segundo \n",
-    "Si para alguna de esas bases $n$ es un posible primo de Fermat, comprueba si además es posible primo de Euler. \n",
+    "Si para alguna de esas bases $n$ es un posible primo de Fermat, comprueba si además es un posible primo de Euler. \n",
     "\n",
     "### Solución\n",
     "\n",
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -860,11 +860,11 @@
      "output_type": "stream",
      "text": [
       "Algoritmo de exponenciación rápida de izquierda a derecha \n",
-      "Para base b=2 1\n",
-      "Para base b=3 1\n",
-      "Para base b=5 1\n",
-      "Para base b=7 1\n",
-      "Para base b=11 1\n"
+      "Para base b=2 mod(2^{75577398}, 75577399) =1\n",
+      "Para base b=3 mod(3^{75577398}, 75577399) =1\n",
+      "Para base b=5 mod(5^{75577398}, 75577399) =1\n",
+      "Para base b=7 mod(7^{75577398}, 75577399) =1\n",
+      "Para base b=11 mod(11^{75577398}, 75577399) =1\n"
      ]
     }
    ],
@@ -874,7 +874,7 @@
     "println(\"Algoritmo de exponenciación rápida de izquierda a derecha \")\n",
     "for b in bases\n",
     "    r2 = LeftToRightFastExponential(b, n-1, n)\n",
-    "    println(\"Para base b=$(b) $r2\")\n",
+    "    println(\"Para base b=$(b) mod($b^{$(n-1)}, $n) = $r2\")\n",
     "end"
    ]
   },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -899,42 +899,43 @@
      "text": [
       "\n",
       "Base 2\n",
-      "Por el algoritmo Jacobi 1\n",
-      "calculando el módulo: 2651439\n",
-      "75577399 NO es un posible primo de Euler en base 2\n",
+      "Por el algoritmo Jacobi (2/75577399) = 1\n",
+      "Calculando el módulo, 2^{27213646/2} = 1\n",
+      "75577399 es un posible primo Euler en base 2\n",
       "\n",
       "Base 3\n",
-      "Por el algoritmo Jacobi -1\n",
-      "calculando el módulo: 24148959\n",
-      "75577399 NO es un posible primo de Euler en base 3\n",
+      "Por el algoritmo Jacobi (3/75577399) = -1\n",
+      "Calculando el módulo, 3^{27213646/2} = 75577398\n",
+      "75577399 NO es primo gracias al criterio de Euler en base 3\n",
       "\n",
       "Base 5\n",
-      "Por el algoritmo Jacobi 1\n",
-      "calculando el módulo: 17726560\n",
-      "75577399 NO es un posible primo de Euler en base 5\n",
+      "Por el algoritmo Jacobi (5/75577399) = 1\n",
+      "Calculando el módulo, 5^{27213646/2} = 1\n",
+      "75577399 es un posible primo Euler en base 5\n",
       "\n",
       "Base 7\n",
-      "Por el algoritmo Jacobi -1\n",
-      "calculando el módulo: 25164264\n",
-      "75577399 NO es un posible primo de Euler en base 7\n",
+      "Por el algoritmo Jacobi (7/75577399) = -1\n",
+      "Calculando el módulo, 7^{27213646/2} = 75577398\n",
+      "75577399 NO es primo gracias al criterio de Euler en base 7\n",
       "\n",
       "Base 11\n",
-      "Por el algoritmo Jacobi 1\n",
-      "calculando el módulo: 13891959\n",
-      "75577399 NO es un posible primo de Euler en base 11\n"
+      "Por el algoritmo Jacobi (11/75577399) = 1\n",
+      "Calculando el módulo, 11^{27213646/2} = 1\n",
+      "75577399 es un posible primo Euler en base 11\n"
      ]
     }
    ],
    "source": [
     "# Celda 2\n",
     "for b in bases\n",
-    "    congruente = LeftToRightFastExponential(b, floor(Int, (n-1)/2), p)\n",
+    "    congruente = LeftToRightFastExponential(b, floor(Int, (n-1)/2), n)\n",
     "    jacobi = Jacobi(b,n)\n",
     "    println(\"\\nBase $b\")\n",
-    "    println(\"Por el algoritmo Jacobi $jacobi\")\n",
-    "    println(\"calculando el módulo: $congruente\")\n",
-    "    println(congruente == jacobi ? \"$n es un posible primo Euler en base $b\" : \n",
-    "    \"$n NO es un posible primo de Euler en base $b\")\n",
+    "    println(\"Por el algoritmo Jacobi ($b/$n) = $jacobi\")\n",
+    "    println(\"Calculando el módulo, $b^{$((p-1))/2} = $congruente\")\n",
+    "    println(congruente == jacobi ? \n",
+    "        \"$n es un posible primo Euler en base $b\" : \n",
+    "        \"$n NO es primo gracias al criterio de Euler en base $b\")\n",
     "end"
    ]
   },
@@ -942,9 +943,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Acabamos de comprobar que $n$ es un posible primo de Euler para las bases 2, 5 y 11, pero gracias a la base 3 o a la 7 sabemos que no es primo, si no que se trata de un **pseudo primo** de Euler en las bases 2, 5 y 11."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Conclusiones   \n",
-    "\n",
-    "A la vista de los resultado en la `celda 1` se tiene que $n$ es un pseudo primo de Fermat para las bases 2,3,5,7,11; mientras que se ha comprobado en `celda 2` que no lo es primo por el criterio de Euler. "
+    "Puesto que acabamos de comprobar que $n$ no es primo, se tiene que: \n",
+    "$n$ es un pseudo primo de Fermat para las bases 2,3,5,7 y 11; mientras que se ha comprobado en `celda 2` es un pseudo primo de Euler en las bases 2,5 y 11. "
    ]
   }
  ],
